# pyproject2conda

./: .buildinfo  .buildinfo.bak  .copier-answers.yml  .cruft.json  .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc.toml  .recipe-append.yaml  .taplo.toml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  authors.html  changelog.html  contributing.html  environment.yaml  genindex.html  index.html  installation.html  justfile  license.html  navigation.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  ruff.toml  search.html  searchindex.js  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  cruft-update.yml  publish.yml
_sources/: index.md  installation.md
_sources/examples/usage/: demo.ipynb
_sources/reference/: cli.rst  index.md
_static/: documentation_options.js
changelog.d/: 20230908_215556_william.krekelberg_sort_dependencies.md  20230919_203028_william.krekelberg_env_mapping.md  20230922_104542_william.krekelberg_update_structure.md  20230926_095142_william.krekelberg_click_typer.md  20231002_111033_william.krekelberg_fix_issue_1.md  20231113_155311_william.krekelberg_ignore_whitespace.md  20231115_154156_william.krekelberg_add_pyproject_table_override.md  20231120_112607_william.krekelberg_get_build_system.md  20231128_134544_william.krekelberg_include_pip.md  20241101_083658_william.krekelberg_remove_comment_support.md  20241101_150228_william.krekelberg_dependency_groups.md  20241101_161304_william.krekelberg_dependency_groups.md  20241104_150803_william.krekelberg.md  20241216_105119_william.krekelberg_infer_python.md  20241216_125650_william.krekelberg_infer_python.md  20241217_133108_william.krekelberg_allow_local_package.md  20241231_083257_william.krekelberg.md  20250124_100257_wpk_package_in_group.md  20250124_115206_wpk_pip_only.md  20250129_062344_wpk_pre_commit_hook.md  20250129_075247_wpk_pre_commit_hook.md  20250219_112011_wpk.md  20250605_124106_wpk_name_template.md  20250605_152416_wpk_dash_or_underscore.md  20250606_121436_wpk_remove_underscore_support.md
config/: recipe-append.yaml
docs/: conf.py  index.md  installation.md
docs/examples/: example-usage.md
docs/reference/: cli.rst  index.md
environment/: base.yaml  dev.yaml  dist-pypi.txt  dist-pypi.yaml  docs-extras.yaml  docs.yaml  lint.yaml  py310-dev-base.yaml  py310-dev-complete.yaml  py310-dev.yaml  py310-dist-conda.yaml  py310-dist-pypi.yaml  py310-docs.yaml  py310-test-extras.yaml  py310-test.yaml  py310-typing.yaml  py311-test-extras.yaml  py311-test.yaml  py311-typing.yaml  py38-test-extras.yaml  py38-test.yaml  py38-typing.yaml  py39-test-extras.yaml  py39-test.yaml  py39-typing.yaml  test-extras.txt  test.yaml  typing.yaml
examples/: example-usage.html  index.html
examples/usage/: demo.html
reference/: cli.html  index.html
requirements/: build.txt  cog.txt  dev-base.txt  dev-complete.txt  dev.txt  docs.txt  pipxrun-tools.txt  py310-dev-base.yaml  py310-dev-complete.yaml  py310-docs.yaml  py310-test-extras.yaml  py310-test.yaml  py310-typing.yaml  py311-dev-base.yaml  py311-dev-complete.yaml  py311-dev.yaml  py311-docs.yaml  py311-test-extras.yaml  py311-test.yaml  py311-typing.yaml  py312-dev.yaml  py312-test-extras.yaml  py312-test.yaml  py312-typing.yaml  py313-dev.yaml  py313-test-extras.yaml  py313-test.yaml  py313-typing.yaml  py314-dev.yaml  py314-test-extras.yaml  py314-test.yaml  py38-test-extras.yaml  py38-test.yaml  py38-typing.yaml  py39-test-extras.yaml  py39-test.yaml  py39-typing.yaml  test-extras.txt  test.txt  typing.txt  (+2 more)
requirements/lock/: build.txt  pre-commit-additional-dependencies.txt  py310-test.txt  py310-typing.txt  py310-typing.txt.hash.json  py311-dev-base.txt  py311-dev-base.txt.hash.json  py311-dev-complete.txt  py311-dev-complete.txt.hash.json  py311-dev.txt  py311-dev.txt.hash.json  py311-docs.txt  py311-docs.txt.hash.json  py311-pipxrun-tools.txt  py311-pipxrun-tools.txt.hash.json  py311-test.txt  py311-test.txt.hash.json  py311-typing.txt  py311-uvxrun-tools.txt  py311-uvxrun-tools.txt.hash.json  py312-test.txt  py312-test.txt.hash.json  py312-typing.txt  py312-uvxrun-tools.txt  py312-uvxrun-tools.txt.hash.json  py313-test.txt  py313-typing.txt  py313-typing.txt.hash.json  py38-test.txt  py38-test.txt.hash.json  py38-typing.txt  py38-typing.txt.hash.json  py39-test.txt  py39-typing.txt  py39-typing.txt.hash.json  uvx-tools.txt  uvx-tools.txt.hash.json
scripts/: dist-conda.mk
src/pyproject2conda/: __init__.py  __main__.py  _compat.py  _config.py  _normalized_requirements.py  _requirements.py  _resolve_dependencies.py  _schema.py  _typing.py  _typing_compat.py  _utils.py  cli.py  cli_click.py  config.py  convert.py  overrides.py  parser.py  requirements.py  resolve_dependencies.py  utils.py
tests/: __init__.py  conftest.py  test-pyproject.toml  test__config.py  test__normalize_requirements.py  test__resolve_dependencies.py  test__schema.py  test__utils.py  test_cli.py  test_config.py  test_parser.py  test_requirements.py  test_smoke.py  test_utils.py
tests/data/: simple-pyproject.toml  test-pyproject-alt.toml  test-pyproject-groups.toml  test-pyproject-no-deps.toml  test-pyproject-reorder.toml  test-pyproject.toml
tests/data/config/: userconfig.toml  userconfig2.toml
tools/: __init__.py  cog-readme.sh  cog_runner.py  cog_utils.py  create_pythons.py  dataclass_parser.py  noxtools.py  projectconfig.py  shared.just
