[build-system]
build-backend = "uv_build"
requires = [
    "uv-build>=0.11.7,<0.12.0",
]

[project]
name = "pyproject2conda"
version = "0.23.0"
description = "A script to convert a Python project declared on a pyproject.toml to a conda environment."
readme = "README.md"
keywords = [
    "pyproject2conda",
]
license = "NIST-PD"
license-files = [ "LICENSE" ]
authors = [
    { name = "William P. Krekelberg", email = "wpk@nist.gov" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "packaging>=26.1",
    "pydantic>=2.12.5",
    "tomli; python_version<'3.11'",
    "typer",
    "typing-extensions; python_version<'3.12'",
]

[project.scripts]
p2c = "pyproject2conda.cli:app"
pyproject2conda = "pyproject2conda.cli:app"

[project.urls]
Documentation = "https://pages.nist.gov/pyproject2conda/"
Homepage = "https://github.com/usnistgov/pyproject2conda"

[dependency-groups]
dev = [
    { include-group = "cog" },
    { include-group = "mypy" },
    { include-group = "nox" },
    { include-group = "pytest-accept" },
    { include-group = "test" },
    { include-group = "type" },
]
test = [
    "pytest-cov",
    "pytest-sugar",
    "pytest-xdist",
    { include-group = "pytest" },
]
type = [
    "types-click",
    { include-group = "nox" },
    { include-group = "pylint" },
    { include-group = "pytest" },
    { include-group = "typecheck-runner" },
]
docs = [
    "autodocsumm",
    "myst-parser",
    "sphinx>=5.3.0",
    # other
    "sphinx-autodoc-typehints",
    "sphinx-book-theme",
    "sphinx-click",
    "sphinx-copybutton",
]
# other groups
basedpyright = [ "basedpyright>=1.31.3" ]
cog = [ "cogapp" ]
docs-live = [
    "sphinx-autobuild",
    { include-group = "docs" },
]
docs-spelling = [
    "pyenchant",
    "sphinxcontrib-spelling",
    { include-group = "docs" },
]
ipython = [ "ipython" ]
mypy = [ "mypy[faster-cache]>=1.20.2" ]
nox = [ "nox>=2026.4.10" ]
pylint = [ "pylint" ]
pytest = [ "pytest" ]
pytest-accept = [ "pytest-accept" ]
test-extras = [
    { include-group = "test" },
]
typecheck-runner = [ "typecheck-runner>=0.2.0; python_version>'3.9'" ]

# * uv -------------------------------------------------------------------------
[tool.uv]
required-version = ">=0.7.15"
default-groups = [ "dev" ]
fork-strategy = "requires-python"
exclude-newer = "7 days"
managed = true
build-backend.source-include = [ "tests/**" ]
pip.annotation-style = "line"
pip.generate-hashes = true

[tool.uv.dependency-groups]
dev.requires-python = ">=3.14"
docs.requires-python = ">=3.14"
docs-live.requires-python = ">=3.14"
docs-spelling.requires-python = ">=3.14"
# other tools
cog.requires-python = ">=3.14"
ipython.requires-python = ">=3.14"
mypy.requires-python = ">=3.14"
nox.requires-python = ">=3.14"

# * Checks ---------------------------------------------------------------------
[tool.repo-review]
ignore = [
    "NOX103", # I prefer using "nox.options.sessions"
    "PC111",  # use doccmd instead of blacken-docs
    "PC140",  # do this externally
    "PC160",  # use typos
    "PC170",  # pygrep
]

[tool.check-wheel-contents]
src_dir = [ "src" ]
toplevel = [ "pyproject2conda" ]

[tool.pyproject-fmt]
# max_supported_python = "3.13"
expand_tables = [
    "project.entry-points",
    "project.optional-dependencies",
    "project.scripts",
    "project.urls",
    "tool.mypy.overrides",
    "tool.pyproject2conda",
    "tool.pyright.executionEnvironments",
    "tool.pytest",
    "tool.typos",
    "tool.uv.dependency-groups",
]
indent = 4
keep_full_version = true

[tool.typos.default.extend-identifiers]
CPY = "CPY"

# * typecheck ---------------------------------------------------------------------
[tool.mypy]
files = [
    "src",
    "tests",
    # tools
    "noxfile.py",
    "tools",
]
strict = true
# options
check_untyped_defs = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pyrefly]
enabled-ignores = [ "pyrefly" ]
project-includes = [
    "src",
    "tests",
    # tools
    "noxfile.py",
    "tools",
]
search-path = [ "." ]

[tool.pyright]
exclude = [
    "**/.mypy_cache",
    "**/.mypy_cache",
    "**/.numba_cache",
    "**/.numba_cache/",
    "**/__pycache__",
    "**/vendored/**",
    ".nox/**",
    ".tox/**",
    ".venv/**",
]
include = [
    "src",
    "tests",
    # tools
    "noxfile.py",
    "tools",
]
strict = [
    "noxfile.py",
    "src",
    "tools/*.py",
]
typeCheckingMode = "standard"
# options
# reportMissingSuperCall = true
deprecateTypingAliases = true
enableReachabilityAnalysis = false
enableTypeIgnoreComments = false
reportCallInDefaultInitializer = true
reportImplicitOverride = true
reportImportCycles = true
reportOverlappingOverload = true
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnreachable = "warning"
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true
reportUnusedCallResult = true
# type-checkers should type-check; linters should lint
reportImplicitStringConcatenation = false
reportPrivateImportUsage = false
reportPrivateUsage = false
reportUnusedImport = false
reportUnusedVariable = false

[[tool.pyright.executionEnvironments]]
root = "tests"
# reportCallIssue = false
# reportArgumentType = false
# reportMissingImports = false
reportUnusedCallResult = false

[tool.ty]
# Disable support for `type: ignore` comments
analysis.respect-type-ignore-comments = false
src.include = [
    "src",
    "tests",
    # tools
    "noxfile.py",
    "tools",
]

# * Testing --------------------------------------------------------------------
[tool.pytest.ini_options]
addopts = [
    "--cov-config=pyproject.toml",
    "--doctest-glob=*.md",
    "--doctest-modules",
    "--pyargs",
    "--strict-config",
    "--strict-markers",
    "-ra",
]
testpaths = [
    "README.md",
    "pyproject2conda",
    "tests",
]
# options
filterwarnings = [ "error" ]
log_cli_level = "INFO"
log_level = "INFO"
minversion = "8"
strict_xfail = "true"

[tool.coverage]
run.branch = true
run.source = [
    "pyproject2conda",
]
paths.source = [
    "src/",
    # needed for testing source if not editable install
    ".nox/**/site-packages/",
    "*/.nox/**/site-packages",
    "*/src",
]
report.exclude_also = [
    "@overload",
    "if TYPE_CHECKING:",
]
report.include = [
    "src/*",
]
report.omit = [
    "*/__main__.py",
    "*/_typing.py",
    "*/vendored/*",
]
report.show_missing = true

# * Dependency creation --------------------------------------------------------
[tool.pyproject2conda]
template-python = "requirements/py{py}-{env}"
template = "requirements/{env}"
name = "py{py}-{env}"
python = "default"
channels = "conda-forge"
style = "yaml"
deps = [ "pip" ]

[tool.pyproject2conda.dependencies]
pytest-accept = { pip = true }

[tool.pyproject2conda.envs.dev]
groups = "dev"

[tool.pyproject2conda.envs.test]
groups = "test"
python = "all"

[tool.pyproject2conda.envs.test-extras]
groups = "test-extras"
python = "all"
skip-package = true

[tool.pyproject2conda.envs.uvx-tools]
reqs = [
    # these used solely for specking tools to be run via uvx ...
    "conda-lock>=4.0.0",
    "copier-template-extensions>=0.3.3",
    "copier>=9.14.3",
    "grayskull>=3.1.0",
    "prek>=0.3.10",
    "pyrefly>=0.61.1",
    "pyright>=1.1.408",
    "rooster>=0.1.1",
    "twine>=6.2.0",
    "ty>=0.0.31",
]
groups = [
    "basedpyright",
    "cog",
    "mypy",
    "nox",
    "typecheck-runner",
]
skip-package = true
style = "requirements"

# * Other tools ----------------------------------------------------------------
[tool.commitizen]
use_shortcuts = true

[tool.rooster]
changelog_contributors = true
major-labels = [ "breaking" ]
minor_labels = [ "enhancement" ]
patch-labels = [ "bug", "documentation" ]
# options
ignore-labels = [ "internal" ]
require-labels = [ "breaking", "bug", "documentation", "enhancement" ]
version_files = [
    "pyproject.toml",
]
# sections
section-labels."Breaking changes" = [ "breaking" ]
section-labels."Bug fixes" = [ "bug" ]
section-labels.Documentation = [ "documentation" ]
section-labels.Enhancements = [ "enhancement" ]
section-labels.Internal = [ "internal" ]
section-labels."Other changes" = [ "__unknown__" ]
