[build-system]
build-backend = "uv_build"
requires = [
    "uv-build>=0.11.24,<0.12.0",
]

[project]
name = "pyproject2conda"
version = "0.23.1"
description = "A script to convert a Python project declared on a pyproject.toml to a conda environment."
readme = "README.md"
keywords = [
    "pyproject2conda",
]
license = "NIST-PD"
license-files = [ "LICENSE" ]
authors = [
    { name = "William P. Krekelberg", email = "wpk@nist.gov" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "packaging>=26.1",
    "pydantic>=2.12.5",
    "tomli; python_version<'3.11'",
    "typer>=0.26.2",
    "typing-extensions; python_version<'3.12'",
]

[project.scripts]
p2c = "pyproject2conda.cli:app"
pyproject2conda = "pyproject2conda.cli:app"

[project.urls]
Documentation = "https://pages.nist.gov/pyproject2conda/"
Homepage = "https://github.com/usnistgov/pyproject2conda"

[dependency-groups]
dev = [
    { include-group = "mypy" },
    { include-group = "nox" },
    { include-group = "pytest-accept" },
    { include-group = "test" },
    { include-group = "type" },
]
test = [
    "pytest-cov",
    "pytest-sugar",
    "pytest-xdist",
    { include-group = "pytest" },
]
type = [
    { include-group = "nox" },
    { include-group = "pylint" },
    { include-group = "pytest" },
    { include-group = "typecheck-runner" },
]
docs = [
    "autodocsumm",
    "myst-parser",
    "sphinx>=5.3.0",
    # other
    "sphinx-autodoc-typehints",
    "sphinx-book-theme",
    "sphinx-copybutton",
    "sphinxcontrib-typer",
]
# other groups
basedpyright = [ "basedpyright>=1.39.8" ]
docs-live = [
    "sphinx-autobuild",
    { include-group = "docs" },
]
docs-spelling = [
    "pyenchant",
    "sphinxcontrib-spelling",
    { include-group = "docs" },
]
ipython = [ "ipython" ]
mypy = [ "mypy[faster-cache]>=2.1.0" ]
nox = [ "nox>=2026.4.10" ]
pylint = [ "pylint" ]
pytest = [ "pytest" ]
pytest-accept = [ "pytest-accept" ]
test-extras = [
    { include-group = "test" },
]
typecheck-runner = [ "typecheck-runner>=0.2.0; python_version>'3.9'" ]

# * uv -------------------------------------------------------------------------
[tool.uv]
required-version = ">=0.11.8"
default-groups = [ "dev" ]
fork-strategy = "requires-python"
exclude-newer = "7 days"
managed = true
build-backend.source-include = [ "tests/**" ]
pip.annotation-style = "line"
pip.generate-hashes = true

[tool.uv.dependency-groups]
dev.requires-python = ">=3.14"
docs.requires-python = ">=3.14"
docs-live.requires-python = ">=3.14"
docs-spelling.requires-python = ">=3.14"
# other tools
ipython.requires-python = ">=3.14"
mypy.requires-python = ">=3.14"
nox.requires-python = ">=3.14"

[tool.uv.exclude-newer-package]
# NOTE: remove this when able
typer = "6 days"
sphinxcontrib-typer = "0 days"

# * Checks ---------------------------------------------------------------------
[tool.repo-review]
ignore = [
    "NOX103", # I prefer using "nox.options.sessions"
    "PC111",  # use doccmd instead of blacken-docs
    "PC140",  # do this externally
    "PC160",  # use typos
    "PC170",  # pygrep
]

[tool.check-wheel-contents]
src_dir = [ "src" ]
toplevel = [ "pyproject2conda" ]

[tool.pyproject-fmt]
# max_supported_python = "3.13"
expand_tables = [
    "project.entry-points",
    "project.optional-dependencies",
    "project.scripts",
    "project.urls",
    "tool.mypy.overrides",
    "tool.pyproject2conda",
    "tool.pyright.executionEnvironments",
    "tool.pytest",
    "tool.typos",
    "tool.uv.dependency-groups",
    "tool.uv.exclude-newer-package",
]
indent = 4
keep_full_version = true

[tool.typos.default.extend-identifiers]
CPY = "CPY"

# * typecheck ---------------------------------------------------------------------
[tool.mypy]
files = [
    "noxfile.py",
    "src",
    "tests",
    "tools",
]
# options
check_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
strict = true
warn_unused_configs = true

[tool.pyrefly]
enabled-ignores = [ "pyrefly" ]
project-includes = [
    "noxfile.py",
    "src",
    "tests",
    "tools",
]
search-path = [ "." ]

[tool.pyright]
typeCheckingMode = "strict"
# strict = [
#     "noxfile.py",
#     "src",
#     "tools/*.py",
# ]
include = [
    "noxfile.py",
    "src",
    "tests",
    "tools",
]
exclude = [
    "**/.mypy_cache",
    "**/.mypy_cache",
    "**/.numba_cache",
    "**/.numba_cache/",
    "**/__pycache__",
    "**/vendored/**",
    ".nox/**",
    ".tox/**",
    ".venv/**",
]
enableTypeIgnoreComments = false
deprecateTypingAliases = true
reportCallInDefaultInitializer = true
reportImplicitOverride = true
reportImplicitStringConcatenation = false
reportImportCycles = true
# reportMissingSuperCall = true
reportOverlappingOverload = true
reportPrivateImportUsage = false
reportPrivateUsage = false
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnreachable = "warning"
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true
reportUnusedCallResult = true
reportUnusedImport = false
reportUnusedVariable = false
enableReachabilityAnalysis = false

[[tool.pyright.executionEnvironments]]
root = "tests"
# reportCallIssue = false
# reportArgumentType = false
# reportMissingImports = false
reportUnusedCallResult = false
reportMissingParameterType = false
reportUnknownParameterType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false

[tool.ty]
src.include = [
    "noxfile.py",
    "src",
    "tests",
    "tools",
]
analysis.respect-type-ignore-comments = false

# * Testing --------------------------------------------------------------------
[tool.pytest.ini_options]
addopts = [
    "--cov-config=pyproject.toml",
    "--doctest-glob=*.md",
    "--doctest-modules",
    "--pyargs",
    "--strict-config",
    "--strict-markers",
    "-ra",
]
testpaths = [
    "README.md",
    "pyproject2conda",
    "tests",
]
# options
filterwarnings = [ "error" ]
log_cli_level = "INFO"
log_level = "INFO"
minversion = "8"
strict_xfail = "true"

[tool.coverage]
run.branch = true
run.source = [
    "pyproject2conda",
]
paths.source = [
    "src/",
    # needed for testing source if not editable install
    ".nox/**/site-packages/",
    "*/.nox/**/site-packages",
    "*/src",
]
report.exclude_also = [
    "@overload",
    "if TYPE_CHECKING:",
]
report.include = [
    "src/*",
]
report.omit = [
    "*/__main__.py",
    "*/_typing.py",
    "*/vendored/*",
]
report.show_missing = true

[tool.commitizen]
use_shortcuts = true

# * Dependency creation --------------------------------------------------------
[tool.pyproject2conda]
template-python = "requirements/py{py}-{env}"
template = "requirements/{env}"
name = "py{py}-{env}"
python = "default"
channels = "conda-forge"
style = "yaml"
conda-deps = "pip"

[tool.pyproject2conda.dependencies]
pytest-accept = { pip = true }

[tool.pyproject2conda.envs.dev]
groups = "dev"

[tool.pyproject2conda.envs.test]
groups = "test"
python = "all"

[tool.pyproject2conda.envs.test-extras]
groups = "test-extras"
python = "all"
skip-package = true

[tool.pyproject2conda.envs.uvx-tools]
pip-deps = [
    # these used solely for specking tools to be run via uvx ...
    "conda-lock>=4.0.1",
    "copier-template-extensions>=0.3.3",
    "copier>=9.16.0",
    "grayskull>=3.1.1",
    "prek>=0.4.5",
    "pyrefly>=1.1.1",
    "pyright>=1.1.410",
    "rooster>=0.1.1",
    "twine>=6.2.0",
    "ty>=0.0.52",
]
groups = [
    "basedpyright",
    "mypy",
    "typecheck-runner",
]
skip-package = true
style = "requirements"

[tool.uv-locker]
scripts = [
    "noxfile.py",
    "tools/check_dist_version.py",
    "tools/cog_runner.py",
    "tools/sync_pyproject_min_versions.py",
]

[[tool.uv-locker.requirements]]
path = "requirements/uvx-tools.txt"
output-file = "requirements/lock/uvx-tools.txt"
python = "min"
options = [
    "--no-deps",
    "--no-strip-extras",
    "--universal",
]

# * Other tools ----------------------------------------------------------------
[tool.rooster]
changelog_contributors = true
major-labels = [ "breaking" ]
minor_labels = [ "enhancement" ]
patch-labels = [ "bug", "documentation" ]
# options
ignore-labels = [ "internal" ]
require-labels = [ "breaking", "bug", "documentation", "enhancement" ]
version_files = [
    "pyproject.toml",
]
# sections
section-labels."Breaking changes" = [ "breaking" ]
section-labels."Bug fixes" = [ "bug" ]
section-labels.Documentation = [ "documentation" ]
section-labels.Enhancements = [ "enhancement" ]
section-labels.Internal = [ "internal" ]
section-labels."Other changes" = [ "__unknown__" ]
